[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/scr_plnexus.gd" type="Script" id=1]
[ext_resource path="res://Sounds/SFXs/sfx_waterstep.wav" type="AudioStream" id=2]

[sub_resource type="CapsuleShape" id=1]
margin = 0.001
radius = 0.5
height = 1.5

[sub_resource type="Animation" id=2]
resource_name = "anm_idle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/head/plaer_view:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.1, -0.5 ), Vector3( 0, -0.1, -0.5 ), Vector3( 0, 0.1, -0.5 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("player_footsteps/player_audio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "anm_walking"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/head/plaer_view:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.15, -0.5 ), Vector3( 0, -0.15, -0.5 ), Vector3( 0, 0.15, -0.5 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("player_footsteps/player_audio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[node name="PlayerNexus" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 3 )
script = ExtResource( 1 )

[node name="player_col" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.29888, 0 )
shape = SubResource( 1 )

[node name="Body" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3816, 0 )

[node name="head" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.657682, 0 )

[node name="plaer_view" type="Camera" parent="Body/head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15, -0.5 )
current = true

[node name="player_footsteps" type="Spatial" parent="."]

[node name="player_audio" type="AudioStreamPlayer3D" parent="player_footsteps"]
stream = ExtResource( 2 )
bus = "Footsteps"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/anm_idle = SubResource( 2 )
anims/anm_walking = SubResource( 3 )
[connection signal="finished" from="player_footsteps/player_audio" to="." method="_on_player_audio_finished"]
